mysql_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mysql
spec:
  selector:
    matchLabels:
      app: mysql8
  strategy:
     type: Recreate
  template:
    metadata:
      labels:
        app: mysql8
    spec:
       containers:
       - image: mysql:8.0
         name: mysql
         ports:
         - containerPort: 3306
         volumeMounts: 
         - mountPath: "/var/lib/mysql"
           name: mysql-local-storage
         - mountPath: "/etc/mysql/"
           readOnly: true
           name: conf
       volumes:
       - name: mysql-local-storage
         persistentVolumeClaim:
           claimName: mysql-pv-claim
       - name: conf     
         configMap:
          name: mysql-conf
          items:
            - key: my.cnf
              path: my.cnf
            - key: mysql.cnf
              path: conf.d/mysql.cnf
            - key: docker.cnf
              path: conf.d/docker.cnf
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql8
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: 10.105.44.55
