nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/var/www/html"
          name: nginx-volume
      volumes:
      - name: nginx-volume
      persistentVolumeClaim:
        claimName: nginx-claim 
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    # Create endpoints also if the related pod isn't ready
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31313
    targetPort: 80
  selector:
    app: nginx
