php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:7.4-fpm 
        ports:
        - containerPort: 9000
        volumeMounts:
          - mountPath: "/var/www/html"
            name: nginx-volume
          - mountPath: "/config/"
            name: conf
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", cp -r /config/. /usr/local/etc/php-fpm.d/ && apt-get update && apt-get -y install libzip-dev && docker-php-ext-install zip && apt-get -y install libpng-dev && docker-php-ext-install gd && kill -USR2 1] 
      volumes:
      - name: nginx-volume
        persistentVolumeClaim:
          claimName: nginx-claim
      - name: conf
        configMap:
          name: php-conf
          items:
            - key: www.conf
              path: www.conf

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: php-svc-test
  annotations:
    # Create endpoints also if the related pod isn't ready
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: NodePort
  ports:
  - port: 9000
    nodePort: 32323
    targetPort: 9000
  selector:
    app: nginx
