prova.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      nodePort: 80
      targetPort: 80
  type: LoadBalancer
